# dagster-deployment

./: .env_template  .gitignore  Dockerfile  Dockerfile.daemon  Dockerfile.webserver  Dockerfile_user_code  README.md  dagster.yaml  docker-compose.yml  hackernews_top_stories.csv  hackernews_top_story_ids.json  pyproject.toml  setup.cfg  setup.py  values.yaml  values_dagsterpracticedev.yaml  values_dagsterpracticedev_template.yaml  values_dagsterpracticeprod.yaml  values_dagsterpracticeprod_template.yaml  values_template.yaml  workspace.yaml
.github/workflows/: deploy.yml
dagster_app/: assets.py  definitions.py  jobs.py  schedules.py
dagster_app_tests/: test_assets.py
dagster_quickstart/: assets.py
dagster_quickstart_tests/: test_assets.py
deploy/: deploy.sh
deployment/: deploy.sh  setup_env.sh
local_single_container_deployment/: Dockerfile  entrypoint.sh
